# pdf_extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pdf_extractor.py
configs/: directory-scan.json  form-scan.json  table-scan.json
data/invoice_test_set/: ground_truth.json
sample_output/invoice_test_set_eval/: invoice_001_standard_usd.csv  invoice_002_eu_vat.csv  invoice_003_credit_note_style.csv  invoice_004_multiline_items.csv  invoice_005_multi_page.csv  invoice_006_no_tax_bank_details.csv  summary.json
scripts/: eval_invoice_test_set.py
src/pdf_extractor/: __init__.py  cli.py  config.py  constants.py  extractor.py  models.py  normalizer.py  pdf_backends.py
src/pdf_extractor/exporters/: __init__.py  csv_exporter.py  sheets_exporter.py  xlsx_exporter.py
src/pdf_extractor/layout_analyzer/: __init__.py  analyzer.py  config.py  debug.py  models.py  preprocess.py
src/pdf_extractor/layout_analyzer/classifiers/: __init__.py  heuristic_classifier.py
src/pdf_extractor/layout_analyzer/detectors/: __init__.py  contours.py  lines.py  tables.py
src/pdf_extractor/layout_analyzer/strategies/: __init__.py  routing.py
tests/: test_cli.py  test_config.py  test_eval_invoice_test_set.py  test_exporters.py  test_extractor.py  test_layout_analyzer.py  test_normalizer.py  test_pdf_backends.py  test_root_launcher.py
