[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-extractor"
version = "0.1.0"
description = "Extract table-like data from PDFs into spreadsheet-friendly formats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pdfplumber>=0.11,<1.0",
  "rapidocr-onnxruntime>=1.2,<2.0",
  "opencv-python>=4.13,<5.0",
]

[project.scripts]
pdf-extractor = "pdf_extractor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
